# torch_blue

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: draft-pdf.yaml  release.yaml  run_tests.yaml
docs/source/: conf.py  debug.rst  getting_started.rst  index.rst  installation.rst  introduction.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: index.rst
docs/source/_templates/python/: class.rst  method.rst
experiments/: create_csv.py  create_slurm_script.py
experiments/outputs/: scaling.csv
experiments/plots/: strong_scaling_speed_up_512.py  weak_scaling.py
paper/: paper.bib  paper.md
scripts/: mnist_tutorial.ipynb  pytorch_tutorial.py  test_overfitting.py
scripts/new_par_sample/DDP_Parallelism/: DDP.py  DDP.slurm  DDP_CNN_CIFAR10.py
scripts/new_par_sample/Hybrid-Parallelism/: custom_sampler.py  hybrid.slurm  hybrid_CNN_CIFAR10.py  hybrid_via_DPP.py
scripts/new_par_sample/Sample_Parallelism/: Sample_Parallel.py  Sample_Parallel_CNN_CIFAR10.py  Sample_Parallel_Transformer_ENTSOE.py  entsoe_data_load.py  sample_parallel.slurm  sample_parallel_transformer.slurm
scripts/parallel_sampling/: sample_parallel_cifar10_cnn.py  sample_parallel_cifar10_resnet10.py  sample_parallel_mnist_cnn.py
tests/: __init__.py  conftest.py
tests/test_vi/: README.md  __init__.py  test_analytical_kl_loss.py  test_base.py  test_conv.py  test_kl_loss.py  test_linear.py  test_sequential.py  test_transformer.py
tests/test_vi/test_distributions/: __init__.py  test_categorical.py  test_distributions_base.py  test_non_bayesian.py  test_normal.py  test_quiet.py  test_student_t.py
tests/test_vi/test_priors/: test_normal_prior.py  test_prior_base.py  test_quiet.py
tests/test_vi/test_utils/: __init__.py  test_convert.py  test_init.py  test_metaclass.py  test_use_norm_constants.py  test_vi_return.py
tests/test_vi/test_variational_distributions/: test_vardist_base.py
torch_bayesian/: __init__.py
torch_bayesian/vi/: __init__.py  analytical_kl_loss.py  base.py  conv.py  kl_loss.py  linear.py  sequential.py  transformer.py
torch_bayesian/vi/distributions/: __init__.py  base.py  categorical.py  non_bayesian.py  normal.py  quiet.py  student_t.py
torch_bayesian/vi/predictive_distributions/: base.py  categorical.py  non_bayesian.py  normal.py
torch_bayesian/vi/priors/: base.py  normal.py  quiet.py  uniform.py
torch_bayesian/vi/utils/: __init__.py  common_types.py  convert.py  errors.py  use_norm_constants.py  vi_return.py
torch_bayesian/vi/variational_distributions/: base.py  non_bayesian.py  normal.py  student_t.py
torch_blue/vi/: __init__.py  _globals.py  analytical_kl_loss.py  base.py  linear.py  transformer.py
torch_blue/vi/distributions/: base.py  categorical.py  non_bayesian.py  normal.py  quiet.py  student_t.py
torch_blue/vi/utils/: common_types.py  convert.py  errors.py  init.py  post_init_metaclass.py  use_norm_constants.py  vi_return.py
torchbuq/vi/: analytical_kl_loss.py  base.py
torchbuq/vi/distributions/: base.py  categorical.py  normal.py  quiet.py  student_t.py
torchbuq/vi/utils/: common_types.py  use_norm_constants.py  vi_return.py
